# nomai

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Dependencies.cmake
core/include/core/: nomai.hpp
core/src/: nomai.cpp
include/nomai/: nomai.hpp
include/nomai/core/: nomai.hpp  project.hpp
include/nomai/tui/: tui.hpp
include/nomai/tui/components/: page.hpp  quit.hpp
include/nomai/tui/components/pages/: main_menu.hpp  projects.hpp
include/nomai/util/: frecency.hpp  matcher.hpp
src/: CMakeLists.txt  main.cpp
src/core/: nomai.cpp  nomai.hpp  project.cpp  project.hpp
src/nomai/: nomai.cpp
src/tui/: tui.cpp
src/tui/components/: quit.cpp
src/tui/components/pages/: main_menu.cpp  projects.cpp
src/util/: frecency.cpp  matcher.cpp
tests/: CMakeLists.txt  frecency_test.cpp  main.cpp  matcher_test.cpp
